[package]
name = "rust_sandbox"
version = "0.1.0"
authors = ["Renan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.185", features = ["derive"]}
clap = { version = "4.3.23", features = ["derive"] }